# serializer version: 1
# name: test_clean_pass_envelope_snapshot
  dict({
    'command': 'desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 18,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_one_hit_past_threshold_envelope_snapshot
  dict({
    'command': 'desloppify',
    'messages': list([
      'smirked exceeds threshold (2 > 1)',
    ]),
    'ok': False,
    'result': dict({
      'findings': list([
        dict({
          'basis': 'manuscript',
          'count': 2,
          'density': None,
          'lines': list([
            dict({
              'chapter': 1,
              'line': 1,
            }),
            dict({
              'chapter': 1,
              'line': 2,
            }),
          ]),
          'passed': False,
          'phrase': '(?i)\\bsmirked\\b',
          'rule_id': 'smirked',
          'threshold': 1,
        }),
      ]),
      'pack': 'offenders',
      'total_words': 6,
      'violations': list([
        'smirked',
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
